tests/negative/typecheck/sum.orng
// sum.orng:7:24: error: expected a value of type `Int`, got a type
//     let x: Int = X_Or_Y
//                       ^
// 
enum X_Or_Y {x, y}
fn main() -> Int {
    let x: Int = X_Or_Y
    x
}